--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -18952,5 +18952,158 @@
         <target>Ich beobachte euch...</target>
       </segment>
     </unit>
+    <unit id="EOq8v7z" name="Zeuge des Armageddon">
+      <notes>
+        <note category="german">Zeuge des Armageddon</note>
+      </notes>
+      <segment>
+        <source>Zeuge des Armageddon</source>
+        <target>Zeuge des Armageddon</target>
+      </segment>
+    </unit>
+    <unit id="c0utONy" name="Ewiger Zweiter">
+      <notes>
+        <note category="german">Ewiger Zweiter</note>
+      </notes>
+      <segment>
+        <source>Ewiger Zweiter</source>
+        <target>Ewiger Zweiter</target>
+      </segment>
+    </unit>
+    <unit id="ObWFLq5" name="Ein Wächter stirbt, aber gibt niemals auf">
+      <notes>
+        <note category="german">Ein Wächter stirbt, aber gibt niemals auf</note>
+      </notes>
+      <segment>
+        <source>Ein Wächter stirbt, aber gibt niemals auf</source>
+        <target>Ein Wächter stirbt, aber gibt niemals auf</target>
+      </segment>
+    </unit>
+    <unit id="DAAZyBP" name="Der Zweitletzte Mohikaner">
+      <notes>
+        <note category="german">Der Zweitletzte Mohikaner</note>
+      </notes>
+      <segment>
+        <source>Der Zweitletzte Mohikaner</source>
+        <target>Der Zweitletzte Mohikaner</target>
+      </segment>
+    </unit>
+    <unit id="OGXhphT" name="Faaaaaaaast, ach verdammt">
+      <notes>
+        <note category="german">Faaaaaaaast, ach verdammt</note>
+      </notes>
+      <segment>
+        <source>Faaaaaaaast, ach verdammt</source>
+        <target>Faaaaaaaast, ach verdammt</target>
+      </segment>
+    </unit>
+    <unit id="nsl_.mz" name="Bis zum Ende und einen Schritt weiter">
+      <notes>
+        <note category="german">Bis zum Ende und einen Schritt weiter</note>
+      </notes>
+      <segment>
+        <source>Bis zum Ende und einen Schritt weiter</source>
+        <target>Bis zum Ende und einen Schritt weiter</target>
+      </segment>
+    </unit>
+    <unit id="QpGLPvL" name="Schließt die Ränke und haltet durch">
+      <notes>
+        <note category="german">Schließt die Ränke und haltet durch</note>
+      </notes>
+      <segment>
+        <source>Schließt die Ränke und haltet durch</source>
+        <target>Schließt die Ränke und haltet durch</target>
+      </segment>
+    </unit>
+    <unit id="7dghzUo" name="Hallo... ist da draußen jemand?">
+      <notes>
+        <note category="german">Hallo... ist da draußen jemand?</note>
+      </notes>
+      <segment>
+        <source>Hallo... ist da draußen jemand?</source>
+        <target>Hallo... ist da draußen jemand?</target>
+      </segment>
+    </unit>
+    <unit id="qDS6yZX" name="Haltet eure Position!">
+      <notes>
+        <note category="german">Haltet eure Position!</note>
+      </notes>
+      <segment>
+        <source>Haltet eure Position!</source>
+        <target>Haltet eure Position!</target>
+      </segment>
+    </unit>
+    <unit id="QC6CiyV" name="Nur ein Finger">
+      <notes>
+        <note category="german">Nur ein Finger</note>
+      </notes>
+      <segment>
+        <source>Nur ein Finger</source>
+        <target>Nur ein Finger</target>
+      </segment>
+    </unit>
+    <unit id="4SlUuFu" name="Plünderer der Schnapsläden">
+      <notes>
+        <note category="german">Plünderer der Schnapsläden</note>
+      </notes>
+      <segment>
+        <source>Plünderer der Schnapsläden</source>
+        <target>Plünderer der Schnapsläden</target>
+      </segment>
+    </unit>
+    <unit id="WWmgpiy" name="Hennessy Highwayman">
+      <notes>
+        <note category="german">Hennessy Highwayman</note>
+      </notes>
+      <segment>
+        <source>Hennessy Highwayman</source>
+        <target>Hennessy Highwayman</target>
+      </segment>
+    </unit>
+    <unit id="7J4l.Gi" name="Barney Gumble der Außenwelt">
+      <notes>
+        <note category="german">Barney Gumble der Außenwelt</note>
+      </notes>
+      <segment>
+        <source>Barney Gumble der Außenwelt</source>
+        <target>Barney Gumble der Außenwelt</target>
+      </segment>
+    </unit>
+    <unit id="G9C.RFA" name="Fass das Saufen lieber sein">
+      <notes>
+        <note category="german">Fass das Saufen lieber sein</note>
+      </notes>
+      <segment>
+        <source>Fass das Saufen lieber sein</source>
+        <target>Fass das Saufen lieber sein</target>
+      </segment>
+    </unit>
+    <unit id="eBiPJQQ" name="Gib mir was zu saufen oder es knallt!">
+      <notes>
+        <note category="german">Gib mir was zu saufen oder es knallt!</note>
+      </notes>
+      <segment>
+        <source>Gib mir was zu saufen oder es knallt!</source>
+        <target>Gib mir was zu saufen oder es knallt!</target>
+      </segment>
+    </unit>
+    <unit id="GUyZdgZ" name="Alles unter 55% ist Wasser">
+      <notes>
+        <note category="german">Alles unter 55% ist Wasser</note>
+      </notes>
+      <segment>
+        <source>Alles unter 55% ist Wasser</source>
+        <target>Alles unter 55% ist Wasser</target>
+      </segment>
+    </unit>
+    <unit id="KZxtKu4" name="Dialyse">
+      <notes>
+        <note category="german">Dialyse</note>
+      </notes>
+      <segment>
+        <source>Dialyse</source>
+        <target>Dialyse</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
