ES Translation fix for Public lights

--- a/translations/buildings.es.xlf
+++ b/translations/buildings.es.xlf
@@ -3310,7 +3310,7 @@
       </notes>
       <segment>
         <source>Straßenbeleuchtung</source>
-        <target>Luces públicas</target>
+        <target>Alumbrado público</target>
       </segment>
     </unit>
     <unit id="p8Ajeue" name="cd33594">
@@ -3319,7 +3319,7 @@
       </notes>
       <segment>
         <source>Selbst in der tiefsten Nacht erlaubt dir der fahle Schein der Laternenmasten, deine Ausgrabungen in der Wüste fortzusetzen. Keine Ausreden mehr, um früh ins Bett zu gehen.</source>
-        <target>Cuando llegue la noche profunda, los pálidos destellos de las farolas te permitirán continuar tus excavaciones en el desierto. No más excusas para irse a la cama. </target>
+        <target>Cuando llegue la oscuridad de la noche, los pálidos destellos de las farolas te permitirán continuar tus excavaciones en el desierto. No más excusas para irse a la cama.</target>
       </segment>
     </unit>
     <unit id="ZLkYC3_" name="e3784de">
