--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -10492,7 +10492,7 @@
       </notes>
       <segment>
         <source>Wir haben zwei Neuigkeiten für dich. Eine gute und eine schlechte. Zuerst die gute: Trotz ihrer hartnäckigen Versuche, ist es den %num% Zombie(s) nicht gelungen, dich aufzufressen. Du hast dich wacker geschlagen. Bravo! Die schlechte: Das Erlebnis war so schlimm, dass du in eine Angststarre verfallen bist. So etwas möchtest du nicht wieder erleben...</source>
-        <target>OK. Tenemos buenas y malas noticias. La buena noticia es que a pesar del esfuerzo de %num% zombis para comerte, haz salido de ésta! La mala noticia es que la experiencia realmente te afectó, por lo que ahora estás aterrorizado por la idea de tener que pasar por todo eso de nuevo...</target>
+        <target>Tenemos dos noticias para ti. La buena es que, a pesar de los intentos de %num% de zombie(s) por devorarte, ¡sobreviviste! Lo malo es que la experiencia fue espantosa y ahora estás aterrorizado a la idea de tener que pasar por ella una segunda vez...</target>
       </segment>
     </unit>
     <unit id="Efbc_qn" name="Haltet den Dieb!">
