--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -7163,7 +7163,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>&lt;nt-any-escape&gt;Ein stumpfes Klicken ertönt und ein wenig grünlicher Rauch entschwebt der {item} ...&lt;/nt-any-escape&gt;&lt;t-escape&gt;Du setzt {item} in Gang. Ein gewaltiger Blitz schießt heraus und blendet die Zombies! Du solltest diese Gelegenheit zur Flucht nutzen.&lt;/t-escape&gt;&lt;t-reverse-escape&gt;Du setzt {item} in Gang. Ein gewaltiger Blitz schießt heraus, mitten in die Reihen der Zombies! Geblendet ergreifen {zombies} Zombies die Flucht.&lt;/t-reverse-escape&gt;</source>
-        <target><![CDATA[<nt-any-escape>A dull sound and a wisp of greenish smoke escape from the {item} ... That didn't seem to work. Disappointed...</nt-any-escape><t-escape>You set off the {item} ... The violent flash sends a blast of photons into the zombie ranks! Blinded, they stumble around, unable to find you.</t-escape><t-reverse-escape>You set off the {item} ... The violent flash sends a blast of photons into the zombie ranks! Blinded, the {zombies} zombies run away.</t-reverse-escape>]]></target>
+        <target><![CDATA[<nt-any-escape>A dull sound and a wisp of greenish smoke escape from the {item} ...<hr/><strong>That didn't seem to work</strong>. Disappointed...</nt-any-escape><t-escape>You set off the {item} ... The violent flash sends a blast of photons into the zombie ranks! Blinded, they stumble around, unable to find you.</t-escape><t-reverse-escape>You set off the {item} ... The violent flash sends a blast of photons into the zombie ranks! Blinded, the {zombies} zombies run away.</t-reverse-escape>]]></target>
       </segment>
     </unit>
     <unit id="0qToQ7z" name="37cd042">
