--- a/translations/help.en.xlf
+++ b/translations/help.en.xlf
@@ -565,7 +565,7 @@
       </notes>
       <segment>
         <source>Die Spieler (auch "Bürger" genannt) leben in kleinen Städten und müssen sich jeden Tag aufs Neue organisieren und eine Strategie finden, um die nächtlichen Zombieangriffe erfolgreich abzuwehren. Je länger sie dabei überleben, desto mehr Punkte können sie sammeln. &lt;strong&gt;Der Tod ist ein fester Bestandteil des Spiels. Alle Stadteinwohner wissen vom ersten Tag an, dass sie sterben werden. Die Frage ist nur wie und wann... &lt;/strong&gt;. Als ob das nicht genug wäre, sind die Spieler dazu verdammt, nach ihrem Tod in einer anderen Stadt wiedergeboren zu werden und das Spiel beginnt wieder von vorn...</source>
-        <target><![CDATA[The players (or citizens) are divided into groups and are allocated a small town where they must organise themselves each day in such a way as to survive as long as possible against these beings. <strong>The last remaining survivor will become the Hero of the town</strong>]]></target>
+        <target><![CDATA[Players (or citizens) are divided into groups and allocated a small town, where they must organize themselves each day in such a way as to survive as long as possible against these beings. <strong>The last remaining survivor will be the Last Man Standing.</strong>]]></target>
       </segment>
     </unit>
     <unit id="kiRQ28V" name="Ziel Nr.1: Erkundungen">
