ES Translation for the forum search (2)

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2512,7 +2512,7 @@
       </notes>
       <segment>
         <source>Foren durchsuchen</source>
-        <target>Foren durchsuchen</target>
+        <target>Buscar en foros</target>
       </segment>
     </unit>
     <unit id="ny.mG4P" name="Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.">
