ES Translation for "remove" element (1)

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2440,7 +2440,7 @@
       </notes>
       <segment>
         <source>Entfernen</source>
-        <target>Entfernen</target>
+        <target>Eliminar</target>
       </segment>
     </unit>
     <unit id="8dquNSH" name="Optionen">
