--- a/translations/help.en.xlf
+++ b/translations/help.en.xlf
@@ -583,7 +583,7 @@
       </notes>
       <segment>
         <source>Während des Tages verlassen die Bürger ihre schützenden Städte, um die &lt;strong&gt;Außenwelt&lt;/strong&gt; zu erkunden. In der Wüste können sie durch Graben allerlei Waffen, Baumaterialien und Nahrung finden.</source>
-        <target><![CDATA[During the day, citizens can leave the relative safety of the town to explore the desolate wastelands of the <strong>World Beyond</strong> to find weapons, materials and food.]]></target>
+        <target><![CDATA[During the day, citizens can leave the relative safety of the town to explore the desolate wasteland of the <strong>World Beyond</strong> to find weapons, materials, food, and other essential items.]]></target>
       </segment>
     </unit>
     <unit id="9phHYef" name="Ziel Nr.2: Zombieangriffe überleben">
