EN Translation fix for Spiked Wall description

--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -2032,7 +2032,7 @@
       </notes>
       <segment>
         <source>Diese Mauer ist mit einer großen Anzahl an Metallspitzen gespickt, damit die Stadtbewohner beim Angriff um Mitternacht ein paar nette Spieße Zombieschaschlik herstellen können.</source>
-        <target>Lots of metal skewers mounted on the ramparts to make zombie kebabs when darkness falls...</target>
+        <target>Lots of metal skewers mounted on metal patches to make zombie kebabs when darkness falls...</target>
       </segment>
     </unit>
     <unit id="QlkvLUP" name="cda28d7">
