--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -10943,7 +10943,7 @@
       </notes>
       <segment>
         <source>Erschöpft</source>
-        <target>Cansa</target>
+        <target>Cansado</target>
       </segment>
     </unit>
     <unit id="UEL2oHO" name="Spielzeit">
