--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -184,7 +184,7 @@
       </notes>
       <segment>
         <source>Die Verdammten wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</source>
-        <target>Die Verdammten wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</target>
+        <target>MyHordes wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</target>
       </segment>
     </unit>
     <unit id="6YlCau0" name="5a5d604">
