--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19103,5 +19103,14 @@
         <target>Sans Foie ni Loi</target>
       </segment>
     </unit>
+    <unit id="FpEFGuI" name="338378b">
+      <notes>
+        <note category="german">%citizen% hat die Zombies mit dem Gegenstand %item% &lt;strong&gt;%duration%&lt;/strong&gt; abgelenkt!</note>
+      </notes>
+      <segment>
+        <source>%citizen% hat die Zombies mit dem Gegenstand %item% &lt;strong&gt;%duration%&lt;/strong&gt; abgelenkt!</source>
+        <target><![CDATA[%citizen% a distrait les zombies pour <strong>%duration%</strong> avec %item%!]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
