--- a/translations/ghost.en.xlf
+++ b/translations/ghost.en.xlf
@@ -189,7 +189,7 @@
     </unit>
     <unit id="ePJ.g5_" name="070fa24">
       <notes>
-        <note category="german">Die Verdammten wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</note>
+        <note category="german">MyHordes wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</note>
       </notes>
       <segment>
         <source>Die Verdammten wird gerade von den Zombies überfallen! Es ist der tägliche Angriff!</source>
