--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19074,5 +19074,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Dialysis</target>
       </segment>
     </unit>
+    <unit id="FpEFGuI" name="338378b">
+      <notes>
+        <note category="german">%citizen% hat die Zombies mit dem Gegenstand %item% &lt;strong&gt;%duration%&lt;/strong&gt; abgelenkt!</note>
+      </notes>
+      <segment>
+        <source>%citizen% hat die Zombies mit dem Gegenstand %item% &lt;strong&gt;%duration%&lt;/strong&gt; abgelenkt!</source>
+        <target><![CDATA[%citizen% has distracted the zombies for <strong>%duration%</strong> using the %item%!]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
